--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           </li>
           <li class="mobile-nav__link-line"></li>
           <li>
-            <a class="mobile-nav__btn btn" href="https://drive.google.com/file/d/1qCdYaByK2I60UbxK4kshukaSw7_xfEWh/view?usp=sharing" target="_blank">Resume</a>
+            <a class="mobile-nav__btn btn" href="https://drive.google.com/file/d/1qCdYaByK2I60UbxK4kshukaSw7_xfEWh/view?usp=share_link" target="_blank">Resume</a>
           </li>
         </ul>
       </nav>
@@ -314,8 +314,7 @@
         <p class="contact__description">
           If my skills can help you to grow your business  or can add value to your company. Please contact me. 
           Also  at the same time I will be learning new skills and upgrading my skills because for me "Life is a journey of learning". 
-          So you can also have my 
-          for future reference.
+          So you can also have my resume for future reference.
           Thank you for your valuable time.
         </p>
         <a
