--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
         <ul>
           <li class="priorex__list">Assisted recruiters in onboarding process.</li>
           <li class="priorex__list">Solved the issues of recruiters when they were facing issues with the Hirect application.</li>
-          <li class="priorex__list">Solved the complex technical issues by collabrating with the technical team.</li>
+          <li class="priorex__list">Solved the complex technical issues by collaborating with the technical team.</li>
           <li class="priorex__list">Recruiters who were frustrated or unhappy with the Hirect services, handled those kind of recruiters in a calm and professional manner.</li>
           <li class="priorex__list">Got promoted has customer support executive because of my good performance.</li>
           <li class="priorex__list">Brought an ROI(Return on investment) of INR 30,000+ for the company by providing a better customer support experience to the recruiters.</li>
